--- a/Forum/forum.css
+++ b/Forum/forum.css
@@ -125,9 +125,7 @@ header {
     text-align: center;
 }
 
-.logo-div a {
-    height: 6rem;
-}
+
     
 .log-sign {
     width: 30rem;
@@ -524,5 +522,18 @@ hr {
 @media (max-width: 700px) {
     .links {
         flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 350px) {
+    div.intro img {
+        width: 25rem;
+        height: 25rem;
+        border-radius: 25rem;
+    }
+    #logo {
+        width: 15rem;
+        height: 3.5rem;
+        margin-top: unset;
     }
 }
