--- a/Gift Card/gift-card.css
+++ b/Gift Card/gift-card.css
@@ -125,9 +125,7 @@ header {
     text-align: center;
 }
 
-.logo-div a {
-    height: 6rem;
-}
+
     
 .log-sign {
     width: 30rem;
@@ -557,5 +555,17 @@ hr {
     .gift-card-container {
         gap: 2rem;
     }
+}
 
+@media (max-width: 350px) {
+    div.intro img {
+        width: 25rem;
+        height: 25rem;
+        border-radius: 25rem;
+    }
+    #logo {
+        width: 15rem;
+        height: 3.5rem;
+        margin-top: unset;
+    }
 }
