--- a/Gift Hamper/gift-hamper.css
+++ b/Gift Hamper/gift-hamper.css
@@ -125,9 +125,7 @@ header {
     text-align: center;
 }
 
-.logo-div a {
-    height: 6rem;
-}
+
     
 .log-sign {
     width: 30rem;
@@ -516,5 +514,18 @@ hr {
     }
     .for-button {
         text-align: center;
+    }
+}
+
+@media (max-width: 350px) {
+    div.intro img {
+        width: 25rem;
+        height: 25rem;
+        border-radius: 25rem;
+    }
+    #logo {
+        width: 15rem;
+        height: 3.5rem;
+        margin-top: unset;
     }
 }
