--- a/Merchandise/merchandise.css
+++ b/Merchandise/merchandise.css
@@ -58,6 +58,7 @@ header {
     top: 0;
     z-index: 999;
     text-transform: uppercase;
+    min-width: 33.4rem;
 }
 
 .wrap-1, .wrap-2 {
@@ -125,9 +126,7 @@ header {
     text-align: center;
 }
 
-.logo-div a {
-    height: 6rem;
-}
+
     
 .log-sign {
     width: 30rem;
@@ -468,7 +467,7 @@ hr {
     }
 }
 
-@media (max-width: 300px) {
+/* @media (max-width: 300px) {
     header {
         padding: unset;
     }
@@ -478,5 +477,18 @@ hr {
 @media (max-width: 238px) {
     .wrap-2 {
         justify-content: unset;
+    }
+} */
+
+@media (max-width: 350px) {
+    div.intro img {
+        width: 25rem;
+        height: 25rem;
+        border-radius: 25rem;
+    }
+    #logo {
+        width: 15rem;
+        height: 3.5rem;
+        margin-top: unset;
     }
 }
