--- a/Sign Up/sign-up.css
+++ b/Sign Up/sign-up.css
@@ -125,9 +125,7 @@ header {
     text-align: center;
 }
 
-.logo-div a {
-    height: 6rem;
-}
+
     
 .log-sign {
     width: 30rem;
@@ -409,3 +407,16 @@ hr {
         font-size: 2.5rem;
     }   
 } */
+
+@media (max-width: 350px) {
+    div.intro img {
+        width: 25rem;
+        height: 25rem;
+        border-radius: 25rem;
+    }
+    #logo {
+        width: 15rem;
+        height: 3.5rem;
+        margin-top: unset;
+    }
+}
