--- a/Live Discussion/live-discussion.css
+++ b/Live Discussion/live-discussion.css
@@ -372,8 +372,8 @@ form p {
     margin: 0 auto;
     border-radius: 2rem;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s;
 }
 
 .contact-us-container h1 {
@@ -408,7 +408,7 @@ input:not([type="submit"]) {
     cursor: pointer;
 }
 
-@-webkit-keyframes animatetop {
+@keyframes animatetop {
     from {top:-300px; opacity:0} 
     to {top:10%; opacity:1}
   }
