--- a/index.css
+++ b/index.css
@@ -60,10 +60,10 @@ header {
     text-transform: uppercase;
 }
 
-.wrap-1, .wrap-2 {
+/* .wrap-1, .wrap-2 {
     width: 97rem;
     height: 6rem;
-}
+} */
 
 .wrap-2 {
     display: flex;
@@ -125,10 +125,19 @@ header {
     text-align: center;
 }
 
+.wrap-1 i {
+    font-size: 2.4rem;
+    display: none;
+}
+
+.wrap-1 .fa-caret-down {
+    display: inline;
+    font-size: 1.6rem;
+}
 
     
 .log-sign {
-    width: 30rem;
+    /* width: 30rem; */
     display: flex;
     justify-content: flex-end;
 }
@@ -622,7 +631,7 @@ hr {
     text-align: center;
 }
 
-@media (max-width: 1360px) {
+@media (max-width: 1111px) {
     .wrap-1 {
         display: none;
     }
@@ -631,6 +640,12 @@ hr {
     }
     #menu {
         display: block;
+    }
+}
+
+@media (max-width: 1350px) {
+    .wrap-1 .navigation-bar {
+        width: 60rem;
     }
 }
 
