--- a/About/about.css
+++ b/About/about.css
@@ -168,6 +168,7 @@ i.book-logo {
 #menu {
     display: none;
     color: orangered;
+    cursor: pointer;
 }
 .events, .products {
     position: relative;
