--- a/Copy/copy.css
+++ b/Copy/copy.css
@@ -170,6 +170,7 @@ i.book-logo {
 #menu {
     display: none;
     color: orangered;
+    cursor: pointer;
 }
 .events, .products {
     position: relative;
