--- a/Copy/copy.css
+++ b/Copy/copy.css
@@ -60,10 +60,7 @@ header {
     text-transform: uppercase;
 }
 
-/* .wrap-1, .wrap-2 {
-    width: 97rem;
-    height: 6rem;
-} */
+/*  */
 
 .wrap-2 {
     display: flex;
@@ -125,6 +122,16 @@ header {
     text-align: center;
 }
 
+.wrap-1 i {
+    font-size: 2.4rem;
+    display: none;
+}
+
+.wrap-1 .fa-caret-down {
+    display: inline;
+    font-size: 1.6rem;
+}
+
 
     
 .log-sign {
@@ -141,8 +148,7 @@ header {
     width: 20rem;
     height: 5rem;
     display: block;
-}
-i.book-logo {
+}i.book-logo {
     font-size: 4rem;
     margin-left: 0.5rem;
     color: orangered;
@@ -204,6 +210,13 @@ i.book-logo {
 
 .navigation-bar > div > a:hover {
     color: orangered;
+}
+
+.wrap-events, .wrap-products{
+    cursor: pointer;
+    &:hover a, &:hover i {
+        color: orangered;
+    }
 }
 
 main {
@@ -312,7 +325,29 @@ hr {
     text-align: center;
 }
 
-/* @media (max-width: 1360px) {
+/* 
+@media (max-width: 1300px) {
+    .wrap-1 .navigation-bar {
+        width: 65rem;
+    }
+}
+
+@media (max-width: 1200px) {
+    .wrap-1 .navigation-bar {
+        width: 60rem;
+    }
+    .nav-item-text {
+        display: none;
+    }
+    .wrap-1 i {
+        display: inline;
+    }
+    .dropdown-content {
+        top: 4.2rem;
+    }
+}
+
+@media (max-width: 1111px) {
     .wrap-1 {
         display: none;
     }
