--- a/About/about.css
+++ b/About/about.css
@@ -56,10 +56,7 @@ header {
     text-transform: uppercase;
 }
 
-.wrap-1, .wrap-2 {
-    width: 97rem;
-    height: 6rem;
-}
+
 
 .wrap-2 {
     display: flex;
@@ -121,10 +118,17 @@ header {
     text-align: center;
 }
 
+.wrap-1 i {
+    font-size: 2.4rem;
+    display: none;
+}
 
-    
+.wrap-1 .fa-caret-down {
+    display: inline;
+    font-size: 1.6rem;
+}
+ 
 .log-sign {
-    width: 30rem;
     display: flex;
     justify-content: flex-end;
 }
@@ -139,12 +143,12 @@ header {
     height: 5rem;
     display: block;
 }
+
 i.book-logo {
     font-size: 4rem;
     margin-left: 0.5rem;
     color: orangered;
 }
-
 
 .sign-up {
     background-color: orangered;
@@ -202,6 +206,13 @@ i.book-logo {
 
 .navigation-bar > div > a:hover {
     color: orangered;
+}
+
+.wrap-events, .wrap-products{
+    cursor: pointer;
+    &:hover a, &:hover i {
+        color: orangered;
+    }
 }
 
 .about > a {
@@ -434,7 +445,29 @@ hr {
     }
 }
 
-@media (max-width: 1360px) {
+
+@media (max-width: 1300px) {
+    .wrap-1 .navigation-bar {
+        width: 65rem;
+    }
+}
+
+@media (max-width: 1200px) {
+    .wrap-1 .navigation-bar {
+        width: 60rem;
+    }
+    .nav-item-text {
+        display: none;
+    }
+    .wrap-1 i {
+        display: inline;
+    }
+    .dropdown-content {
+        top: 4.2rem;
+    }
+}
+
+@media (max-width: 1111px) {
     .wrap-1 {
         display: none;
     }
