--- a/Package/package.css
+++ b/Package/package.css
@@ -254,7 +254,7 @@ main {
 .basic-container,
 .intermediate-container,
 .advanced-container {
-    background-color: #B08D57;
+    background:linear-gradient(135deg, #c28c5c 0%,#8f532f 100%);
     width: 100%;
     max-width: 36rem;
     padding: 2rem;
@@ -308,22 +308,25 @@ main {
 }
 
 .advanced-container .join-now {
-    background-color: #E58F2A;
-    border: 1px solid #E58F2A;
+    /* background-color: #E58F2A; */
+    background:linear-gradient(135deg, #fad961 0%,#f76b1c 100%);
+    border: none;
     box-shadow: 0 0.8rem #c07013;
 }
 
 .advanced-container .join-now:hover {
-    background-color: #F1AB22;
-    border-color: #F1AB22;
+    background:linear-gradient(135deg, #fcdf8a 0%,#f38381 100%);
+
 }
 
 .intermediate-container {
-    background-color: #C0C0C0;
+    background:linear-gradient(135deg, #E3E3E3 0%,#5D6874 100%);
+    
 }
 
 .advanced-container-wrap {
     background-color: #E5A300;
+    background:linear-gradient(135deg, #f2d50f 0%,#da0641 100%);
     border-radius: 2rem;
     padding: 0 1rem 1rem;
     margin-bottom: 5.5rem;
@@ -338,6 +341,7 @@ main {
 
 .advanced-container {
     background-color: #FFD700;
+    background:linear-gradient(135deg, #fad961 0%,#f76b1c 100%);
 
 }
 
@@ -370,7 +374,7 @@ input[type="checkbox"] {
     margin: 0 auto;
     padding: 2rem;
     min-height: 60rem;
-    background-color: #00aced;
+    background:linear-gradient(135deg, #7117ea 0%,#ea6060 100%);
     border-radius: 2rem;
     display: flex;
     justify-content: center;
@@ -390,6 +394,7 @@ input[type="checkbox"] {
     border: 1px solid #fff;
     box-shadow: 0 0.8rem #a6a1a1;
     cursor: pointer;
+    /* background:linear-gradient(135deg, #622774 0%,#c53364 100%); */
 }
 
 .customize:hover {
