--- a/About/about.css
+++ b/About/about.css
@@ -299,8 +299,8 @@ main {
 
 .founders-container {
     width: 100%;
-    background-color: #FADCD9;
-    border: 1px solid #FADCD9;
+    background-color: whitesmoke;
+    border: 1px solid whitesmoke;
 }
 
 .founders-container h1 {
@@ -321,7 +321,7 @@ main {
     display: flex;
     justify-content: space-evenly;
     flex-flow: row wrap;
-    border: 1px solid #FADCD9;
+    /* border: 1px solid #FADCD9; */
     gap: 10rem;
     margin: 2rem auto;
 }
