--- a/Package/package.css
+++ b/Package/package.css
@@ -81,6 +81,16 @@ header {
     color: black;
 }
 
+.fixed-container {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
 .navigation-bar-2 {
     width: 100%;
     display: block;
