--- a/index.css
+++ b/index.css
@@ -13,6 +13,10 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.scroll-lock {
+    overflow: hidden;
+}
+
 .uppercase {
     text-transform: uppercase;
 }
